--- a/compose.yml
+++ b/compose.yml
@@ -30,5 +30,16 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
 
+  redis:
+    image: redis:alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    command: redis-server --save 20 1 --loglevel warning
+    volumes:
+      - cache:/data  
+
+
 volumes:
   mysql_data:
+  cache:
