normalized migrations + modified timestamps

--- a/compose.yml
+++ b/compose.yml
@@ -35,11 +35,9 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
-    command: redis-server --save 20 1 --loglevel warning
-    volumes:
-      - cache:/data  
+    restart: unless-stopped
+ 
 
 
 volumes:
   mysql_data:
-  cache:
