--- a/muzawed/composer.json
+++ b/muzawed/composer.json
@@ -21,7 +21,8 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "pestphp/pest": "^3.7",
-        "pestphp/pest-plugin-laravel": "^3.1"
+        "pestphp/pest-plugin-laravel": "^3.1",
+        "recca0120/laravel-erd": "^0.1"
     },
     "autoload": {
         "psr-4": {
