--- a/compose.yml
+++ b/compose.yml
@@ -5,8 +5,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: laravel_app
-    ports:
-      - "8000:8000"
+    #ports:
+     # - "8001:9000"
     volumes:
       - ./:/var/www
     working_dir: /var/www
@@ -37,7 +37,15 @@ services:
       - "6379:6379"
     restart: unless-stopped
  
-
+  nginx:
+    image: nginx:alpine
+    ports:
+      - 8000:80
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./:/var/www
+    depends_on:
+    - app  
 
 volumes:
   mysql_data:
