--- a/compose.yml
+++ b/compose.yml
@@ -36,6 +36,8 @@ services:
     ports:
       - "6379:6379"
     restart: unless-stopped
+    volumes:
+      - redis_data:/data
  
   nginx:
     image: nginx:alpine
@@ -49,3 +51,4 @@ services:
 
 volumes:
   mysql_data:
+  redis_data:
